# GridBox

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.example.toml  pyproject.toml
.github/: gridbox-ci-report.txt  provider-removal-report.txt
.github/workflows/: bootstrap-report.yml  bootstrap-validation.yml  ci.yml  provider-removal-validation.yml
assets/ascii/: gridbox-compact.txt  gridbox.txt
crates/gridbox-agent/: Cargo.toml
crates/gridbox-agent/src/: client.rs  lib.rs  models.rs  prompt.rs
crates/gridbox-analysis/: Cargo.toml
crates/gridbox-analysis/src/: lib.rs  strategy.rs  summary.rs
crates/gridbox-cli/: Cargo.toml
crates/gridbox-cli/src/: cli.rs  doctor.rs  main.rs
crates/gridbox-fastf1-client/: Cargo.toml
crates/gridbox-fastf1-client/src/: client.rs  lib.rs  protocol.rs
crates/gridbox-jolpica/: Cargo.toml
crates/gridbox-jolpica/src/: client.rs  lib.rs  models.rs
crates/gridbox-models/: Cargo.toml
crates/gridbox-models/src/: chat.rs  history.rs  lib.rs  live.rs
crates/gridbox-openf1/: Cargo.toml
crates/gridbox-openf1/src/: client.rs  error.rs  lib.rs  normalize.rs
crates/gridbox-storage/: Cargo.toml
crates/gridbox-storage/src/: config.rs  lib.rs  paths.rs  recording.rs
crates/gridbox-tui/: Cargo.toml
crates/gridbox-tui/src/: app.rs  commands.rs  demo.rs  events.rs  lib.rs  runtime.rs
crates/gridbox-tui/src/ui/: dashboard.rs  engineer.rs  header.rs  help.rs  history.rs  input.rs  live.rs  logo.rs  mod.rs  theme.rs
docs/: ARCHITECTURE.md  COMMANDS.md
python/gridbox_fastf1/: __init__.py  __main__.py  protocol.py  worker.py
python/gridbox_fastf1/handlers/: __init__.py  common.py  compare.py  sessions.py  telemetry.py
python/tests/: test_protocol.py
scripts/: bootstrap.ps1  bootstrap.sh
