[workspace]
resolver = "2"
members = [
  "crates/gridbox-models",
  "crates/gridbox-storage",
  "crates/gridbox-openf1",
  "crates/gridbox-jolpica",
  "crates/gridbox-analysis",
  "crates/gridbox-agent",
  "crates/gridbox-fastf1-client",
  "crates/gridbox-tui",
  "crates/gridbox-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
repository = "https://github.com/amaansyed27/GridBox"
authors = ["Amaan Syed"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6.0"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
