[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridbox-fastf1"
version = "0.1.0"
description = "Local FastF1 analysis worker for GridBox"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastf1>=3.8,<4",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["python/gridbox_fastf1"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["python/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
