[package]
name = "gridbox-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gridbox"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
gridbox-agent = { path = "../gridbox-agent" }
gridbox-fastf1-client = { path = "../gridbox-fastf1-client" }
gridbox-jolpica = { path = "../gridbox-jolpica" }
gridbox-storage = { path = "../gridbox-storage" }
gridbox-tui = { path = "../gridbox-tui" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
