[package]
name = "gridbox-jolpica"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gridbox-models = { path = "../gridbox-models" }
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
