[package]
name = "gridbox-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
gridbox-models = { path = "../gridbox-models" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
